--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                 <div class="portfolio-caption-heading">
                                     <a href="https://univers-manga.com/" target="_blank">Univers Manga</a>  
                                 </div>
-                                <div class="portfolio-caption-subheading text-muted">Fullstack : Symfony et Twig</div>
+                                <div class="portfolio-caption-subheading text-muted">Front-end</div>
                             </div>
                         </div>
                     </div>
