--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Projets</h2>
+                    <h2 class="section-heading text-uppercase">Projet</h2>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
